tests/syntax-error/tests/test-syntax-error.art
import.version:3.0.0 {unitt}!
import {src/syntax-error}!

describe "Leap" [
    it "a year not divisible by 4 is a common year" [
        expects.be:'false? @[isLeap? 2015]
    ]
]